--- a/public/slot2/index.html
+++ b/public/slot2/index.html
@@ -24,13 +24,13 @@
     </script>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-13YBPX9XN4"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0C18W697FK"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-13YBPX9XN4');
+    gtag('config', 'G-0C18W697FK');
 </script>
 
 
